--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,9 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.project.sunshined.sunshined.MainActivity" />
         </activity>
+        <provider
+            android:authorities="com.project.sunshined.sunshined"
+            android:name=".data.WeatherProvider"/>
     </application>
 
 </manifest>
