--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,7 @@
             android:name=".data.WeatherProvider"
             android:enabled="true"
             android:exported="false"/>
+        <service android:name=".service.SunshineService"/>
     </application>
 
 </manifest>
